--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -33,15 +33,7 @@
 					</ul>
 				</nav>
 
-				<div class="fh5co-footer">
-					<p><small>&copy; copyright Worker in Street</span> <span>Owned By <a href="https://www.facebook.com/saifrazaaa" target="_blank">Saif Raza</a> </span> </small></p>
-					<ul>
-						<li><a href="#"><i class="icon-facebook"></i></a></li>
-						<li><a href="#"><i class="icon-twitter"></i></a></li>
-						<li><a href="#"><i class="icon-instagram"></i></a></li>
-						<li><a href="#"><i class="icon-linkedin"></i></a></li>
-					</ul>
-				</div>
+
 
 			</aside>
 
@@ -126,13 +118,7 @@
 	          </div>
 	        </div></td></tr>
 
-	         <tr><td><div class="form-group">
-	          <label class="control-label col-sm-3">Address <br>
-	          <small>(your colony and street no cumpulsory)</small></label>
-	          <div class="col-md-5 col-sm-8">
-	            <input type="text" class="form-control" required name="address" id="contactnum2" placeholder="Any other or Landline no (if any)" value="karachi">
-	          </div>
-	        </div></td></tr>
+
 	        <tr><td><div class="form-group">
 	          <label class="control-label col-sm-3">Profile Photo <br>
 	          <small>(File should be jpg or png)</small></label>
@@ -157,18 +143,25 @@
 	        </div>
 
 	        </div></td></tr>
+					<tr><td><div class="form-group">
+					 <label class="control-label col-sm-3">Address <br>
+					 <small>(your colony and street no cumpulsory)</small></label>
+					 <div class="col-md-5 col-sm-8">
+						 <input type="text" class="form-control" required name="address" id="contactnum2" placeholder="Please Write Your Street And Colony Name" value="karachi">
+					 </div>
+				 </div></td></tr>
 	        <tr><td><div class="form-group">
 	          <label class="control-label col-sm-3">City <br>
 	          </label>
 	          <div class="col-md-5 col-sm-8">
-	            <input type="text" class="form-control" required name="city"  placeholder="Any other or Landline no (if any)" value="karachi">
+	            <input type="text" class="form-control" required name="city"  placeholder="City" value="karachi">
 	          </div>
 	        </div></td></tr>
 	        <tr><td><div class="form-group">
 	          <label class="control-label col-sm-3">Country <br>
 	        </label>
 	          <div class="col-md-5 col-sm-8">
-	            <input type="text" class="form-control" required name="country"  placeholder="Any other or Landline no (if any)" value="pakistan">
+	            <input type="text" class="form-control" required name="country"  placeholder="Country" value="pakistan">
 	          </div>
 	        </div></td></tr>
 	        <tr><td><div class="form-group">
@@ -202,4 +195,15 @@
 
 			</div>
 		</div>
+		<hr>
+		<center><div class="fh5co-footer">
+			<p class="col-lg-12 col-sm-6 col-md-6"><small>&copy; copyright Worker in Street</span> <span>Owned By<a href="http://www.facebook.com/saifrazaaa" target="_blank"> Saif Raza</a> </span> </small></p>
+			<table>
+			<td class="col-lg-2 col-sm-3 col-md-3"><a href="#"><i class="icon-facebook" style="font-size:25px"></i></a></td>
+			<td class="col-lg-2 col-sm-3 col-md-3"><a href="#"><i class="icon-twitter" style="font-size:25px"></i></a></td>
+			<td class="col-lg-2 col-sm-3 col-md-3"><a href="#"><i class="icon-instagram" style="font-size:25px"></i></a></td>
+			<td class="col-lg-2 col-sm-3 col-md-3"><a href="#"><i class="icon-linkedin" style="font-size:25px"></i></a></td>
+</table>
+		</div></center>
+		<hr>
 	</div>
