--- a/views/about.hbs
+++ b/views/about.hbs
@@ -32,15 +32,6 @@
 				</ul>
 			</nav>
 
-			<div class="fh5co-footer">
-				<p><small>&copy; copyright Worker in Street</span> <span>Owned By<a href="http://www.facebook.com/saifrazaaa" target="_blank"> Saif Raza</a> </span> </small></p>
-				<ul>
-					<li><a href="#"><i class="icon-facebook"></i></a></li>
-					<li><a href="#"><i class="icon-twitter"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin"></i></a></li>
-				</ul>
-			</div>
 
 		</aside>
 
@@ -177,4 +168,16 @@
 			</div>
 
 		</div>
+		<hr>
+
+		<center><div class="fh5co-footer">
+			<p class="col-lg-12 col-sm-6 col-md-6"><small>&copy; copyright Worker in Street</span> <span>Owned By<a href="http://www.facebook.com/saifrazaaa" target="_blank"> Saif Raza</a> </span> </small></p>
+			<table>
+			<td class="col-lg-2 col-sm-3 col-md-3"><a href="#"><i class="icon-facebook" style="font-size:25px"></i></a></td>
+			<td class="col-lg-2 col-sm-3 col-md-3"><a href="#"><i class="icon-twitter" style="font-size:25px"></i></a></td>
+			<td class="col-lg-2 col-sm-3 col-md-3"><a href="#"><i class="icon-instagram" style="font-size:25px"></i></a></td>
+			<td class="col-lg-2 col-sm-3 col-md-3"><a href="#"><i class="icon-linkedin" style="font-size:25px"></i></a></td>
+</table>
+		</div></center>
+		<hr>
 	</div>
