--- a/views/login.hbs
+++ b/views/login.hbs
@@ -132,15 +132,7 @@ body {
 				</ul>
 			</nav>
 
-			<div class="fh5co-footer">
-        <p><small>&copy; copyright Worker in Street</span> <span>Owned By<a href="http://www.facebook.com/saifrazaaa" target="_blank"> Saif Raza</a> </span> </small></p>
-				<ul>
-					<li><a href="#"><i class="icon-facebook"></i></a></li>
-					<li><a href="#"><i class="icon-twitter"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin"></i></a></li>
-				</ul>
-			</div>
+
 
 		</aside>
 
@@ -149,28 +141,34 @@ body {
 			<div class="fh5co-narrow-content">
 
 				<p class="text-center quote" style="font-size:25px">If You are A Worker Please Login To Your Account First</p>
-        {{#if message}}
-        {{message}}
-        {{/if}}
+
 
 			</div>
 			<div class="login-page">
+        <td>{{#if flashmessage}}
+          <div class="alert alert-danger ">{{flashmessage}}</div>
+        {{/if}}</td>
 	  <div class="form">
 
 	    <form class="login-form" action="/workers/login" method="post">
-	      <input type="text" name="username" placeholder="Username or Email" required/>
+	      <input type="text" name="email" placeholder="Username or Email" required/>
 	      <input type="password" name="password" placeholder="password" required/>
 	      <button>Login</button><i>New to here ?</i> <a href="/registration">Sign Up</a>
 
 	    </form>
 	  </div>
 	</div>
+ </div>
+ <hr>
 
-
-
-
-
-
-
-		</div>
-	</div>
+ <center><div class="fh5co-footer">
+   <p class="col-lg-12 col-sm-6 col-md-6"><small>&copy; copyright Worker in Street</span> <span>Owned By<a href="http://www.facebook.com/saifrazaaa" target="_blank"> Saif Raza</a> </span> </small></p>
+   <table>
+   <td class="col-lg-2 col-sm-3 col-md-3"><a href="#"><i class="icon-facebook" style="font-size:25px"></i></a></td>
+   <td class="col-lg-2 col-sm-3 col-md-3"><a href="#"><i class="icon-twitter" style="font-size:25px"></i></a></td>
+   <td class="col-lg-2 col-sm-3 col-md-3"><a href="#"><i class="icon-instagram" style="font-size:25px"></i></a></td>
+   <td class="col-lg-2 col-sm-3 col-md-3"><a href="#"><i class="icon-linkedin" style="font-size:25px"></i></a></td>
+</table>
+ </div></center>
+ <hr>
+</div>
