--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -145,9 +145,9 @@
 	        </div></td></tr>
 					<tr><td><div class="form-group">
 					 <label class="control-label col-sm-3">Address <br>
-					 <small>(your colony and street no cumpulsory)</small></label>
+					 <small>(Just colony Name)</small></label>
 					 <div class="col-md-5 col-sm-8">
-						 <input type="text" class="form-control" required name="address" id="contactnum2" placeholder="Please Write Your Street And Colony Name" value="karachi">
+						 <input type="text" class="form-control" required name="address" id="contactnum2" placeholder="Just Write Your Colony Name" value="karachi">
 					 </div>
 				 </div></td></tr>
 	        <tr><td><div class="form-group">
