--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -2,17 +2,21 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-	<head>
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>{{title}}</title>
+	<title>{{title}}</title>
 	<link rel="icon" href="/images/icon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive"
+	/>
 	<meta name="author" content="FreeHTML5.co" />
-		<!--
+	<!--
 	//////////////////////////////////////////////////////
 
 	FREE HTML5 TEMPLATE
@@ -26,12 +30,12 @@
 	//////////////////////////////////////////////////////
 	-->
 
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
@@ -71,11 +75,12 @@
 	<![endif]-->
 
 
-	</head>
-	<body>
-    {{{ body }}}
+</head>
 
-<!-- jQuery -->
+<body>
+	{{{ body }}}
+
+	<!-- jQuery -->
 	<script src="/javascripts/jquery.min.js"></script>
 	<!-- jQuery Easing -->
 	<script src="/javascripts/jquery.easing.1.3.js"></script>
@@ -96,32 +101,32 @@
 	<!-- Jquery -->
 	<script src="/javascript/jquery.js"></script>
 
-	</body>
-	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-	<script>
-	$(document).ready(function(){
+</body>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script>
+	$(document).ready(function () {
+		function userposition(pos) {
+			var officelati = 24.8602;
+			var officelongi = 67.0699;
+			var office = officelati + "," + officelongi;
+			var lati = pos.coords.latitude;
+			var longi = pos.coords.longitude;
+			var coords = lati + "," + longi;
+			var x = document.getElementById("map").setAttribute('src', 'https://www.google.com/maps/embed/v1/place?key=AIzaSyDQ_YowBXrKttpiLOsY1w41ArSbXsjCcG4&q=' + coords);
+			var y = document.getElementById("office").setAttribute('src', 'https://www.google.com/maps/embed/v1/place?key=AIzaSyDQ_YowBXrKttpiLOsY1w41ArSbXsjCcG4&q=' + office);
+			//x.innerHTML="<iframe id='google_map' width='1000' height='1000' frameborder='0' style='border:0' src='https://www.google.com/maps/embed/v1/place?key=AIzaSyDQ_YowBXrKttpiLOsY1w41ArSbXsjCcG4&q='+coords allowfullscreen> </iframe>"
+			document.getElementById("latlong").value = coords;
 
-	function userposition(pos){
-		var officelati=24.8602;
-		var officelongi=67.0699;
-		var office=officelati+","+officelongi;
-		var lati=pos.coords.latitude;
-		var longi=pos.coords.longitude;
-		var coords=lati+","+longi;
-		
-    var x=document.getElementById("map").setAttribute('src','https://www.google.com/maps/embed/v1/place?key=AIzaSyDQ_YowBXrKttpiLOsY1w41ArSbXsjCcG4&q='+coords);
-		var y=document.getElementById("office").setAttribute('src','https://www.google.com/maps/embed/v1/place?key=AIzaSyDQ_YowBXrKttpiLOsY1w41ArSbXsjCcG4&q='+office);
+		}
+		if (navigator.geolocation) {
+			navigator.geolocation.getCurrentPosition(userposition);
+		}
+		else {
+			x.innerHTML = "Your Current Location Is Not Available";
+			y.innerHTML = "Your Current Location Is Not Available";
 
-		//x.innerHTML="<iframe id='google_map' width='1000' height='1000' frameborder='0' style='border:0' src='https://www.google.com/maps/embed/v1/place?key=AIzaSyDQ_YowBXrKttpiLOsY1w41ArSbXsjCcG4&q='+coords allowfullscreen> </iframe>"
-	}
-	if(navigator.geolocation){
-		navigator.geolocation.getCurrentPosition(userposition);
-	}
-	else {
-		x.innerHTML="Your Current Location Is Not Available";
-		y.innerHTML="Your Current Location Is Not Available";
-
-	}
+		}
 	});
-	</script>
+</script>
+
 </html>
